--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ nav ul li a i {
 }
 
 nav ul li a:hover {
-    color: #faf7f7;
+    color: #333;
 }
 
 .hero {
@@ -314,10 +314,6 @@ footer {
     cursor: pointer;
     font-size: 1.5rem;
 }
-
-
-#scrollToTopBtn:haver {
-    background-color: #555
 }
 }
 
